edint some codes

--- a/index.html
+++ b/index.html
@@ -15,39 +15,47 @@
   </head>
   <body>
     <section class="container">
+      <div>
+        <h2 class="text-center text-danger" id="error-meg">Error !!! value is not a number, please try again</h2>
+      </div>
       <div class="text-center my-3">
         <h3>Meal Calculation</h3>
-      </div>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col border-end border-warning border-5">
-          <div>
-            <label for="total-joma">Total Joma Taka : </label>
-            <input id="total-joma" type="text" class="form-control" />
-          </div>
-          <div>
-            <label for="total-bazar">Total Bazar Khoroj : </label>
-            <input id="total-bazar" type="text" class="form-control" />
-          </div>
-          <div>
-            <label for="total-meal">Total Meal : </label>
-            <input id="total-meal" type="text" class="form-control" />
-          </div>
-        </div>
-
-        <div class="col mt-md-5 ps-md-5">
-          <div>
-            <h5>Taka Ase : <span id="taka-ase">00</span> Taka</h5>
-          </div>
-          <div>
-            <h4>Meal Rate : <span id="meal-rate">00</span> Taka</h4>
-          </div>
-          <!-- <div>
-            <h4>Meal Rate Round : <span id="Meal-rate-round">00</span> Taka</h4>
-          </div> -->
-        </div>
-
         <div>
-          <button onclick="mealRate()" class="btn form-control btn-success">
+          <label for="date">Date : </label>
+          <input type="date" name="date" id="date">
+        </div>
+      </div>
+      <div>
+        <div class="row row-cols-2 g-4 mx-auto">
+          <div class="col border-end border-warning border-5">
+            <div>
+              <label for="total-joma">Total Joma Taka<span class="text-danger">*</span> : </label>
+              <input id="total-joma" type="text" class="form-control" placeholder="enter total joma taka"/>
+            </div>
+            <div class="my-3">
+              <label for="total-bazar">Total Bazar Khoroj<span class="text-danger">*</span> : </label>
+              <input id="total-bazar" type="text" class="form-control" placeholder="enter total bazar khoroj" />
+            </div>
+            <div>
+              <label for="total-meal">Total Meal<span class="text-danger">*</span> : </label>
+              <input id="total-meal" type="text" class="form-control" placeholder="enter total meal"/>
+            </div>
+          </div>
+
+          <div class="col mt-md-5 ps-md-5">
+            <div>
+              <h6>Date & Time: <span id="set-date"></span></h6>
+            </div>
+            <div>
+              <h5>Taka Ase : 	৳ <span id="taka-ase">00</span> tk</h5>
+            </div>
+            <div>
+              <h4>Meal Rate : 	৳ <span id="meal-rate">00</span> tk</h4>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-4">
+          <button onclick="mealRate()" class="btn btn-success px-4">
             Meal Rate
           </button>
         </div>
@@ -59,9 +67,9 @@
             <tr>
               <th scope="col">#No</th>
               <th scope="col">Name</th>
-              <th scope="col">Meal</th>
               <th scope="col">Joma(tk)</th>
               <th scope="col">Khoroj(tk)</th>
+              <th scope="col">Meal</th>
               <th scope="col">Dibe(tk)</th>
               <th scope="col">Pabe(tk)</th>
             </tr>
@@ -79,31 +87,48 @@
           </tbody>
         </table>
         <div class="w-75 mx-auto">
+          <form action="">
           <div class="row row-cols-1 row-cols-md-3 mt-5">
             <div>
-              <label for="name">Name : </label>
-              <input type="text" id="name" placeholder="Enter Name" />
+              <label for="name">Name<span class="text-danger">*</span> : </label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="enter member name" required
+              />
             </div>
 
-            <div>
-              <label for="meal">Meal : </label>
-              <input type="text" id="meal" placeholder="Enter Meal" />
+            <div class="my-3 my-md-0">
+              <label for="joma-taka">Joma(tk)<span class="text-danger">*</span> : </label>
+              <input
+                type="text"
+                id="joma-taka"
+                class="form-control"
+                placeholder="enter taka joma" required
+              />
             </div>
-
             <div>
-              <label for="joma-taka">Joma(tk) : </label>
-              <input type="text" id="joma-taka" placeholder="Enter taka joma" />
+              <label for="meal">Meal<span class="text-danger">*</span> : </label>
+              <input
+                type="text"
+                class="form-control"
+                id="meal"
+                placeholder="enter meal" required
+              />
             </div>
           </div>
           <div class="text-center my-4">
             <button
               onclick="addMember()"
               id="add-member"
-              class="btn btn-primary"
+              class="btn btn-primary form-control w-50"
             >
               Add member
             </button>
           </div>
+        </form>
+
         </div>
       </div>
     </section>
