--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
       </div>
       <!-- Error Massages start -->
       <div>
-        <h4 class="text-center text-danger my-2" id="error-meg">
-          Error !!! it's not a valid input, please try again
-        </h4>
+        <h6 class="text-center text-danger my-2" id="error-meg"></h6>
       </div>
       <!-- Error Massages End -->
       <!-- Member Info Table start -->
