--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body style="background-color: rgb(255, 254, 255)">
     <section class="container">
       <div class="text-center my-3">
-        <h3>Match <span class="text-warning">Meal Calculation</span></h3>
+        <h3>Mess <span class="text-warning">Meal Calculation</span></h3>
         <div>
           <label for="date">Date : </label>
           <input type="date" name="date" id="date" />
@@ -67,7 +67,7 @@
               <h5>Taka Ase : ৳ <span id="taka-ase">0</span></h5>
             </div>
             <div>
-              <h4>Meal Rate : ৳ <span id="meal-rate">0</span></h4>
+              <h4 class="text-success">Meal Rate : ৳ <span id="meal-rate">0</span></h4>
             </div>
           </div>
         </div>
